# ros-basics

./: .gitignore  README.md
src/comm-basics/: CMakeLists.txt  package.xml
src/comm-basics/src/: publisher.cpp  subscriber.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/gazebo/worlds/: car.sdf
src/simulation/launch/: _launch.py  _launch.xml  _launch_car.py  _launch_car_gazebo.py  _launch_mycar.py  _launch_xacro.py
src/simulation/rviz/: urdf.rviz
src/simulation/urdf/: model.config  simulation.urdf
src/simulation/urdf/xacro/: base.urdf
src/simulation/urdf/xacro_gazebo/: car_gazebo.xacro
